- Fix home layout in mobile. - Fix navbar overlap.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -56,6 +56,7 @@ body {
 .navbar {
   margin-bottom: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .glyphicon {
